--- a/style.css
+++ b/style.css
@@ -71,3 +71,29 @@ body {
 .pad6 {
   background: navy;
 }
+
+.visual div {
+  position: absolute;
+  bottom: 0%;
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  transform: scale(1);
+  z-index: -1;
+}
+
+@keyframes move {
+  0% {
+    bottom: 0%;
+    left: 20%;
+  }
+  50% {
+    bottom: 50%;
+    left: 50%;
+  }
+
+  100% {
+    bottom: 0%;
+    left: 80%;
+  }
+}
