[UPDATE] change bubble animation
-bubble in a static position
-bubble bounce motion

--- a/style.css
+++ b/style.css
@@ -74,7 +74,10 @@ body {
 
 .visual div {
   position: absolute;
-  bottom: 0%;
+  bottom: 50%;
+  left: 50%;
+  margin-left: -20px;
+  margin-top: -25px;
   height: 50px;
   width: 50px;
   border-radius: 50%;
@@ -84,16 +87,30 @@ body {
 
 @keyframes move {
   0% {
-    bottom: 0%;
-    left: 20%;
+    transform: scale(0);
   }
+
   50% {
-    bottom: 50%;
-    left: 50%;
+    transform: scale(2);
   }
 
   100% {
-    bottom: 0%;
-    left: 80%;
+    transform: scale(0);
+  }
+}
+
+@keyframes full {
+  0% {
+    transform: scale(5);
+    opacity: 0.2;
+  }
+
+  50% {
+    transform: scale(1);
+    opacity: 0.2;
+  }
+  100% {
+    transform: scale(0);
+    opacity: 0.2;
   }
 }
